# cursor

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  config.ini  install_and_run.sh  interrupt_handler.py  loader.py  path.py  recorder.py  renderer.py  requirements.txt  setup.py  test_loader.py  test_path.py  test_recorder.py  test_renderer.py  visualizer.py
.circleci/: config.yml
cursor/: __init__.py  analysis.py  bb.py  collection.py  convert.py  data.py  device.py  export.py  filter.py  loader.py  misc.py  parser.py  path.py  position.py  properties.py  recorder.py  renderer.py  sorter.py  spiral.py  timer.py
cursor-rust/: Cargo.toml  README.md
cursor-rust/src/: helpers.rs  main.rs  monitor.rs  path.rs  recorder.rs  test.json  test.rs
data/: mscoco.ipynb
docs/: calcomp1043.md  graphtech.md  hp7470a.md  hpgl_notes.md  index_everest_v2.md  material.md  mutoh_xp500.md  plotter_howtos.md  plotters.md  serial_interface.md
examples/: arcade_example.py  arcade_ui.py  bb.py  bb_example.py  bb_example_bb_landscape_a3_dpx3300_a3.py  benchmark_h5.py  downsample.py  how_many_paths.py  json_h5_converter.py  json_h5_converter_benchmark.py  laser_benchmark.py  laser_benchmark_gcode.py  laser_benchmark_hpgl.py  loader_single_file.py  memory_test.py  multi_pen.py  multiprocessing_example.py  offset_example.py  oriented_bb.py  pickle_collection.py  raw_hpgl.py  realtime.py  recorder_tool.py  simple_rect.py  simple_rect_gcode.py  tektronix.py  timer_example.py
experiments/: broccoli.json  buffer_overflow.py  camm1.py  composition37.py  (+59 more)
(+390 files in other folders)
