[package]
name = "cursor-rust"
version = "0.1.0"
edition = "2018"
authors = ["Marcel Schwittlick <info@schwittlick.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#nannou = "0.17"
#winit = "0.25.0"
chrono = "0.4.19"
winapi = { version = "0.3.9", features = ["wingdi", "winuser", "libloaderapi", "combaseapi", "objbase", "shobjidl", "winerror"] }
rdev = "0.5.1"
ctrlc = "3.1.9"
base64 = "0.13.0"
tao = "0.4.0"
simple_logger = "1.11.0"
flate2 = "1.0.20"